# volcano2cmaq

./: README.md  run.cfg  run.py  setup.cfg  volcano2ioapi.py
tests/: test_msvol.py  test_rc.py
tests/inputs/: MSVOLSO2L4_20260129.txt
tests/inputs/HEMCO/VOLCANO/v2021-09/2020/07/: so2_volcanic_emissions_Carns.20200724.rc
tests/inputs/HEMCO/VOLCANO/v2024-04/2020/06/: so2_volcanic_emissions_Carns.20200630.rc
tests/inputs/HEMCO/VOLCANO/v2024-04/2020/07/: so2_volcanic_emissions_Carns.20200701.rc  so2_volcanic_emissions_Carns.20200702.rc  so2_volcanic_emissions_Carns.20200703.rc  so2_volcanic_emissions_Carns.20200704.rc  so2_volcanic_emissions_Carns.20200705.rc  so2_volcanic_emissions_Carns.20200706.rc  so2_volcanic_emissions_Carns.20200707.rc  so2_volcanic_emissions_Carns.20200708.rc  so2_volcanic_emissions_Carns.20200709.rc  so2_volcanic_emissions_Carns.20200710.rc  so2_volcanic_emissions_Carns.20200711.rc  so2_volcanic_emissions_Carns.20200712.rc  so2_volcanic_emissions_Carns.20200713.rc  so2_volcanic_emissions_Carns.20200714.rc  so2_volcanic_emissions_Carns.20200715.rc  so2_volcanic_emissions_Carns.20200716.rc  so2_volcanic_emissions_Carns.20200717.rc  so2_volcanic_emissions_Carns.20200718.rc  so2_volcanic_emissions_Carns.20200719.rc  so2_volcanic_emissions_Carns.20200720.rc  so2_volcanic_emissions_Carns.20200721.rc  so2_volcanic_emissions_Carns.20200722.rc  so2_volcanic_emissions_Carns.20200723.rc  so2_volcanic_emissions_Carns.20200724.rc  (+7 more)
tests/inputs/mcip/: GRIDCRO2D_1188NHEMI2  METCRO3D_1188NHEMI2
volcano2cmaq/: __init__.py  __main__.py  _core.py
(+1 files in other folders)
