[metadata]
name = volcano2cmaq
version = 0.1.1
author = Barron Henderson
author_email = barronh@gmail.com
description = Make volcano emission files in IOAPI-like format for CMAQ.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/barronh/volcano2cmaq
project_urls =
    Bug Tracker = https://github.com/barronh/volcano2cmaq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy >= 1.19
    pandas >= 1.1

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator

